--- a/index.html
+++ b/index.html
@@ -110,13 +110,11 @@
                     <div class="col">
                         <div class="about-info">
                             <h3>My introduction</h3>
-                            <p>As an aspiring Machine Learning Engineer and AI Developer, I am passionate about
-                                leveraging my knowledge of Python and the basics of machine learning and AI to solve
-                                complex problems and create innovative solutions.
-                                I am eager to apply my knowledge in a practical setting and am actively seeking
-                                opportunities where I can further hone my skills. I am a quick learner, a team player,
-                                and am committed to staying updated with the latest trends and advancements in the field
-                                of AI and machine learning.
+                            <p>I’m a passionate Web Developer with a strong interest in working across both front-end and back-end development. 
+                                I have solid knowledge in HTML, CSS, JavaScript, and Python, and I enjoy creating responsive, interactive websites 
+                                that are both user-friendly and high-performing. I make an effort to stay updated with the latest trends and frameworks (like React and Node.js) 
+                                to bring new features into my projects. I’m looking for projects and opportunities where I can further improve my skills and collaborate with a team 
+                                to create something awesome. 😊
                             </p>
                             <div class="about-btn">
                                 <button class="btn">Download CV <i class="uil uil-import"></i></button>
