--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
                         </div>
                         <div class="proj-item">
                             <div class="proj-details">
-                                <h2>Weather Check</h2>
-                                <p>Python, Libraries, and APIs</p>
-                                <button><a href="https://github.com/shahfahad09/Weater-checking" target="_blank">View Source</a></button>
+                                <h2>Khan_portfolio</h2>
+                                <p>HTML,CSS,JS</p>
+                                <button><a https://shahfahad09.github.io/khan-Portfolio/>View Source</a></button>
                             </div>
                         </div>
                         <div class="proj-item">
