--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                             <div class="proj-details">
                                 <h2>Khan_portfolio</h2>
                                 <p>HTML,CSS,JS</p>
-                                <button><a https://shahfahad09.github.io/khan-Portfolio/</a></button>
+                                <button><a href = "https://shahfahad09.github.io/khan-Portfolio/" target = "_blank"</a></button>
                             </div>
                         </div>
                         <div class="proj-item">
