--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                         </p>
                     </div>
                     <div class="featured-text-btn">
-                        <button class="btn blue-btn">Hire Me</button>
+<!--                         <button class="btn blue-btn">Hire Me</button> -->
+                         <button class="btn blue-btn" onclick="openEmail()">Hire Me</button>
                         <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
                     </div>
                     <div class="social_icons">
