--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- Add favicon -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-    <title>💡Personal website 💡</title>
+    <title> 🌐 Md. Shahfahad Khan 🌐</title>
 </head>
 
 <body>
