--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
                     <div class="portfolio-content container">
                         <div class="proj-item">
                             <div class="proj-details">
-                                <h2>Web Calculator</h2>
+                                <h2>Weather App</h2>
                                 <p>Built using HTML, CSS, JS</p>
-                                <button><a href="https://github.com/shahfahad09/WebCalculator" target="_blank">View Source</a></button>
+                                <button><a href="https://mausamchecking.netlify.app" target="_blank">Check App </a></button>
                             </div>
                         </div>
                         <div class="proj-item">
@@ -165,9 +165,9 @@
                         </div>
                         <div class="proj-item">
                             <div class="proj-details">
-                                <h2>Khan_portfolio</h2>
+                                <h2>गणना यंत्र</h2>
                                 <p>HTML,CSS,JS</p>
-                                <button><a href = "https://shahfahad09.github.io/khan-Portfolio/" target = "_blank"> View site </a></button>
+                                <button><a href = "https://gananayantr.netlify.app" target = "_blank"> Check(गणना यंत्र) </a></button>
                             </div>
                         </div>
                         <div class="proj-item">
