--- a/index.html
+++ b/index.html
@@ -179,16 +179,16 @@
                         </div>
                         <div class="proj-item">
                             <div class="proj-details">
-                                <h2>Amazon Clone</h2>
-                                <p>Built using Python, Plotly</p>
-                                <button><a href="https://github.com/shahfahad09/cloneamazon" target="_blank">View Source</a></button>
+                                <h2>Currency converter</h2>
+                                <p>Buit using HTML , CSS, JS</p>
+                                <button><a href="https://currencytabdeel.netlify.app" target="_blank">Try it </a></button>
                             </div>
                         </div>
                         <div class="proj-item">
                             <div class="proj-details">
                                 <h2>Railways Reservation</h2>
                                 <p>C++ and DSA</p>
-                                <button><a href="https://github.com/shahfahad09/-Railway-Reservation-System" target="_blank">View Source</a></button>
+                                <button><a href="https://github.com/shahfahad09/-Railway-Reservation-Syste" target="_blank">View Source</a></button>
                             </div>
                         </div>
                     </div>
