--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
                         <p>I'm <span class="typedText"></span></p>
                     </div>
                     <div class="featured-text-info">
-                        <p> I am 18 year old, BCA student studied at Chandigarh University and Computer studies. I
-                            really enjoy solving problems as well as making things pretty and easy to use. I can't stop
-                            learning new things; the more, the better.
+                        <p>I am an 18-year-old BCA student at Chandigarh University, specializing in Computer Studies. I enjoy solving problems and creating solutions that are both visually appealing and user-friendly. I am passionate about learning new things and believe that the more I learn, the better I become.
                         </p>
                     </div>
                     <div class="featured-text-btn">
