--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                         <p>I'm <span class="typedText"></span></p>
                     </div>
                     <div class="featured-text-info">
-                        <p>I am an 18-year-old BCA student at Chandigarh University, specializing in Computer Studies. I enjoy solving problems and creating solutions that are both visually appealing and user-friendly. I am passionate about learning new things and believe that the more I learn, the better I become.
+                        <p>
+                            I am an 18-year-old BCA student at Chandigarh University, specializing in Computer Studies. I am passionate about Machine Learning and aspire to become an ML Engineer. I enjoy solving problems, creating efficient and user-friendly solutions, and continuously learning new concepts to enhance my skills. The more I learn, the better I become at turning ideas into impactful innovations.
                         </p>
                     </div>
                     <div class="featured-text-btn">
