--- a/index.html
+++ b/index.html
@@ -110,11 +110,7 @@
                     <div class="col">
                         <div class="about-info">
                             <h3>My introduction</h3>
-                            <p>I’m a passionate Web Developer with a strong interest in working across both front-end and back-end development. 
-                                I have solid knowledge in HTML, CSS, JavaScript, and Python, and I enjoy creating responsive, interactive websites 
-                                that are both user-friendly and high-performing. I make an effort to stay updated with the latest trends and frameworks (like React and Node.js) 
-                                to bring new features into my projects. I’m looking for projects and opportunities where I can further improve my skills and collaborate with a team 
-                                to create something awesome. 😊
+                            <p>I’m a passionate ML Engineer with expertise in Python, machine learning algorithms, and frameworks like TensorFlow and PyTorch. I enjoy building intelligent systems, working with data, and solving real-world problems. Always eager to learn, I stay updated with the latest advancements in AI and seek opportunities to grow and create impactful solutions. 😊
                             </p>
                             <div class="about-btn">
                                 <button class="btn">Download CV <i class="uil uil-import"></i></button>
