--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                 <div class="portfolio">
                     <div class="proj-heading">
                         <h1>Projects</h1>
+                        <p>Resume project are pending...</p>
                     </div>
                     <div class="portfolio-content container">
                         <div class="proj-item">
