--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                     <div class="col">
                         <div class="about-info">
                             <h3>My introduction</h3>
-                            <p>I’m a passionate ML Engineer with expertise in Python, machine learning algorithms, and frameworks like TensorFlow and PyTorch. I enjoy building intelligent systems, working with data, and solving real-world problems. Always eager to learn, I stay updated with the latest advancements in AI and seek opportunities to grow and create impactful solutions. 😊
+                            <p>
+                                I’m a passionate ML Engineer with a strong interest in developing and deploying machine learning models for real-world applications. I have solid knowledge in Python, data analysis, machine learning algorithms, and frameworks like TensorFlow and PyTorch. I enjoy working with datasets to extract insights, build predictive models, and create intelligent systems that solve complex problems. I make an effort to stay updated with the latest advancements in AI and machine learning to enhance my expertise. I’m looking for projects and opportunities where I can further refine my skills and collaborate with a team to build impactful solutions. 😊
                             </p>
                             <div class="about-btn">
                                 <button class="btn">Download CV <i class="uil uil-import"></i></button>
