--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="featured-text-info">
                         <p>
-                            I am an 18-year-old BCA student at Chandigarh University, specializing in Computer Studies. I am passionate about Machine Learning and aspire to become an ML Engineer. I enjoy solving problems, creating efficient and user-friendly solutions, and continuously learning new concepts to enhance my skills. The more I learn, the better I become at turning ideas into impactful innovations.
+                            I am an 18-year-old BCA student at Chandigarh University, with a focus on Computer Studies. I have a deep passion for Machine Learning and aspire to become an ML Engineer. I enjoy tackling complex problems and designing efficient, user-friendly solutions. Constantly learning and staying updated with new technologies is something I value, as it helps me transform ideas into impactful innovations. My journey of continuous growth motivates me to keep pushing boundaries in the field of technology.
                         </p>
                     </div>
                     <div class="featured-text-btn">
@@ -130,7 +130,8 @@
                                 <span>HTML</span>
                                 <span>CSS</span>
                                 <span>JavaScript</span>
-                                <span>Data Entry </span>
+                                <span>Numpy </span>
+                                <span>Pandas </span>
                                 <span>Social Media Hnadle </span>
                                 <span>Data Structure Algorithm (DSA) </span>
 
