--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
                         </div>
                         <div class="proj-item">
                             <div class="proj-details">
-                                <h2>Finance Website</h2>
-                                <p>Built with HTML, CSS</p>
-                                <button><a href="#" target="_blank">View Source</a></button>
+                                <h2>Pizza Pie</h2>
+                                <p>Built with HTML,CSS,JS</p>
+                                <button><a href="https://pizza-pie-khan.netlify.app/" target="_blank">View Source</a></button>
                             </div>
                         </div>
                         <div class="proj-item">
