--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <div class="proj-details">
                                 <h2>Pizza Pie</h2>
                                 <p>Built with HTML,CSS,JS</p>
-                                <button><a href="https://pizza-pie-khan.netlify.app/" target="_blank">View Source</a></button>
+                                <button><a href="https://pizza-pie-khan.netlify.app/" target="_blank">View Website</a></button>
                             </div>
                         </div>
                         <div class="proj-item">
